common/common.css
@import url(carbon.css);

#teacherMenuHeader,
#adminMenuHeader,
#teacherMenuSide,
#adminMenuSide {
  display: none;
}

.someSpacing {
  padding: .5em 0;
}

.user-container {
  padding: 1rem;
}

.user-container>p,
.user-container>strong,
.user-container>h5 {
  color: #f4f4f4;
}

.bx--modal-container .bx--modal-content {
  padding-right: var(--cds-spacing-05, 1rem);
}

.bx--product-switcher__all-btn {
  padding: 0;
  padding-top: .5rem;
}

.bx--table-row--menu-option .bx--overflow-menu-options__btn .bx--overflow-menu-options__option-content img {
  position: relative;
  top: .1875rem;
  margin-right: .5rem;
}

page-context {
  display: none;
}

.progress-bar {
  height: 4px;
  background-color: var(--cds-ui-01, #f4f4f4);
  width: 100%;
  overflow: hidden;
  position: absolute;
  top: 3rem;
  z-index: 10;
}

.progress-bar.error {
  background-color: var(--cds-text-error, #da1e28);
}

.progress-bar-value {
  width: 100%;
  height: 100%;
  background-color: var(--cds-interactive-01, #0f62fe);
  animation: indeterminateAnimation 2s infinite linear;
  transform-origin: 0% 50%;
}
.progress-bar.error .progress-bar-value {
  display: none;
}

.bx--inline-notification--error {
  position: absolute;
  bottom: 0;
  left: 1rem;
}

@keyframes indeterminateAnimation {
  0% {
    transform: translateX(0) scaleX(0);
  }

  20% {
    transform: translateX(0) scaleX(0.4);
  }

  50%,
  100% {
    transform: translateX(100%) scaleX(0.5);
  }
}

i {
  font-style: italic !important;
}

.bottomControls {
  position: absolute;
  bottom: 4rem;
  width: 14rem;
}

.bottomControls .bx--form-item {
  display: inline-block;
}

.bx--toggle-input:checked+.bx--toggle-input__label>.bx--toggle__switch::before {
  background-color: var(--cds-ui-04, #8d8d8d) !important;
}

#devModeContextRaw .string { color: green !important; }
#devModeContextRaw .number { color: darkorange !important; }
#devModeContextRaw .boolean { color: blue !important; }
#devModeContextRaw .null { color: magenta !important; }
#devModeContextRaw .key { color: red !important; }
#devmodeButton {float: right; position: relative; top: 1rem;}

/* hotfix 1 -- */
/* for some reason the CC library doesnt have a native responsive sidemenu adaptation for the UI shell header so this is my solution to that */
/* some user contexts/flows may have further menus or surfaces that dictate a dedicated sidebar but this will suffice for now */
@media (min-width: 66rem) {
  .IAE--topnavMenu {
    display: none !important;
  }
}

.IAE--topnavMenu {
  display: block;
}

/* -- */

/* hotfix 2 -- */
/* fix the user selection control being squished */
.bx--header__menu-trigger {
  margin-right: 0 !important;
}

/* -- */

body {
  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif !important;
}
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    -webkit-background-clip: text;
    -webkit-text-fill-color: var(--cds-text-01, #161616);
    transition: background-color 5000s ease-in-out 0s;
    box-shadow: inset 0 0 20px 20px #23232300;
}
/* ... */

